// Copyright 2022 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.duchy;

option java_package = "org.wfanet.measurement.internal.duchy";
option java_multiple_files = true;

// Service to get and update the latest continuation token.
service ContinuationTokens {
  // Get the latest continuation token.
  rpc getContinuationToken(GetContinuationTokenRequest)
      returns (GetContinuationTokenResponse);

  // Set the latest continuation token.
  rpc setContinuationToken(SetContinuationTokenRequest)
      returns (SetContinuationTokenResponse);
}

// Request to retrieve the latest continuation token.
message GetContinuationTokenRequest {}

message GetContinuationTokenResponse {
  // Content of continuation token.
  string token = 1;
}

// Request to Set the latest continuation token.
message SetContinuationTokenRequest {
  // Content of the continuation token.
  string token = 2;
}

message SetContinuationTokenResponse {}
